--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,8 +1,4 @@
 {
-  "app": {
-    "title": "Мое приложение",
-    "welcome": "Добро пожаловать!"
-  },
   "nav": {
     "references": "Справочники"
   },
@@ -28,5 +24,8 @@
   },
   "import": {
     "title": "Импорт"
+  },
+  "references": {
+    "title": "Справочники"
   }
 }
