--- a/locales/ru.json
+++ b/locales/ru.json
@@ -26,6 +26,7 @@
     "title": "Импорт"
   },
   "references": {
-    "title": "Справочники"
+    "title": "Справочники",
+    "loading": "Загрузка..."
   }
 }
