--- a/locales/en.json
+++ b/locales/en.json
@@ -26,6 +26,7 @@
     "title": "Import"
   },
   "references": {
-    "title": "References"
+    "title": "References",
+    "loading": "Loading..."
   }
 }
