--- a/locales/ru.json
+++ b/locales/ru.json
@@ -22,8 +22,9 @@
     "saved": "Настройки успешно сохранены!",
     "error": "Произошла ошибка"
   },
-  "import": {
-    "title": "Импорт"
+  "edit": {
+    "create_title": "Создать",
+    "edit_title": "Редактировать"
   },
   "references": {
     "title": "Справочники",
